# pbapi

./: .gitignore  .pre-commit-config.yaml  README.md  appwrite.json  db_backup.py  db_migration.py  pyproject.toml
alembic/: env.py
alembic/versions/: 000_legacy_schema.py  001_initial_schema.py  002_shop_address.py  003_conflicting_schema.py  004_add_identity_providers.py  004_add_identity_providers_down.sql  004_add_identity_providers_up.sql  005_purchased_item_unit.py  005_purchased_item_unit_down.sql  005_purchased_item_unit_up.sql  006_receipt_shop_id_int.py  006_receipt_shop_id_int_down.sql  006_receipt_shop_id_int_up.sql  007_fix_user_identity_pkey.py  007_fix_user_identity_pkey_down.sql  007_fix_user_identity_pkey_up.sql
src/: constants.py
src/adapters/api/: appwrite_functions.py  fastapi_app.py  fastapi_routes.py
src/adapters/db/: cosmos_db.py  postgresql.py
src/adapters/logger/: sentry.py
src/adapters/rest/: appwrite_fastapi_adapter.py  appwrite_functions.py  fastapi_app.py  fastapi_routes.py
src/handlers/: add_barcodes.py  link_shop.py  shop.py  user_identity.py
src/handlers/sfs_md/: receipt.py
src/helpers/: common.py  log.py
src/schemas/: purchased_item.py  request_schemas.py  response_schemas.py  shop.py  user.py  user_identity.py
src/tests/integration/handlers/: test_parse_from_url_postgres.py  test_user_identity.py
src/tests/unit/: __init__.py
src/tests/unit/adapters/: test_postgresql.py
src/tests/unit/api/: test_fastapi_routes.py
src/tests/unit/handlers/: test_shop.py  test_user_identity.py
(+4 files in other folders)
